# Domain-Name-LLM

./: .gitignore  README.md  evaluation_with_bleu.csv  main.py  pyproject.toml  requirements.txt  results.csv  template.py
.gradio/flagged/: dataset1.csv
data/: dataset_notes.md  generate_dataset.py
domain-name-llm/checkpoints/v1/checkpoint-15/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
domain-name-llm/checkpoints/v1/checkpoint-30/: adapter_config.json  adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
domain-name-llm/checkpoints/v1/checkpoint-45/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
evaluation/: bleu_evaluations.py  evaluation.py
reports/: Project Report
training/scripts/: training_lora.py
