[project]
name = "domain-name-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "gradio>=5.38.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "nltk>=3.9.1",
    "openai==0.28.1",
    "peft>=0.16.0",
    "transformers>=4.53.3",
    "trl>=0.19.1",
]
